fixed excess gaps

--- a/css/canitquest.css
+++ b/css/canitquest.css
@@ -41,10 +41,9 @@
     width: 100%;
     height: 100%;
     display: grid;
-    /* grid-template-rows: repeat(8, 1fr); */
     grid-template-columns: repeat(8, 1fr);
+    grid-template-columns: repeat(auto-fill, minmax(64px, 1fr));
     grid-auto-flow: dense;
-    /*grid-auto-rows: minmax(auto, auto); */
     gap: 10px;
     padding: 2vh;
 }
@@ -52,8 +51,6 @@
 .grid-element
 {
     background-color: white;
-    /* grid-row: span 1; */
-    /* grid-column: span 1; */
     cursor: pointer;
     width: fit-content;
     height: fit-content;
@@ -61,9 +58,7 @@
 
 .grid-image
 {
-    /* object-fit: contain; */
-    /* max-width: 100%;
-    max-height: 100%; */
+
     display: block;
     aspect-ratio: 1 / 1;
 }
